--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tapti-sdk-client",
   "description": "A SDK to use Tapti APIs on Client Side",
+  "version": "1.0.5",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
